--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-plugin-typescript": "^2.3.1",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-graphql": "^2.1.25",
     "gatsby-theme-portfolio": "^1.2.0",
     "gatsby-transformer-sharp": "^2.4.4",
     "prop-types": "^15.7.2",
