--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-mail-form": "^2.1.0",
+    "react-social-icons": "^4.1.0",
     "styled-components": "^5.1.0",
     "to-style": "^1.3.3"
   },
