--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^5.2.1",
     "react-mail-form": "^2.1.0",
     "react-social-icons": "^4.1.0",
+    "react-vertical-timeline-component": "^2.6.0",
     "styled-components": "^5.1.0",
     "to-style": "^1.3.3"
   },
